Add `AccountClientRequestEntity` for accounting purposes (WIP)